--- a/index.html
+++ b/index.html
@@ -1,167 +1,52 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Orion Carbon • Remigio Angelo Dingashe • Africa's First Full-Stack Carbon Ecosystem</title>
-  <meta name="description" content="Verified carbon credits → Blockchain tokenization → Green jobs academy. Real smart contract. Real MetaMask minting. Real Polygon deployment.">
-  
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;700;800&family=Space+Grotesk:wght@500;700&display=swap" rel="stylesheet">
-  
-  <!-- Tailwind + AOS -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
-  
-  <!-- ethers.js for real blockchain interaction -->
-  <script src="https://cdn.ethers.io/lib/ethers-5.7.2.umd.min.js"></script>
-
-  <script>
-    tailwind.config = {
-      theme: { extend: { colors: { p: '#052e16', e: '#15803d', s: '#f59e0b' },
-        fontFamily: { d: ['Space Grotesk', 'sans-serif'], b: ['Manrope', 'sans-serif'] } } } }
-  </script>
-
-  <style>
-    .hero{background:linear-gradient(135deg,rgba(5,46,22,.96),rgba(21,128,61,.88)),url('https://images.unsplash.com/photo-1621435928156-8497dc2d5d7d?ixlib=rb-4.0.3&auto=format&fit=crop&w=2400&q=95') center/cover fixed}
-    .page{display:none}.page.active{display:block}
-    .logo{filter:drop-shadow(0 0 40px #f59e0b99)}
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orion Carbon</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin:0; padding:0; background:#f9f9f9; color:#333; }
+        header { background:#1b1b1b; color:#fff; padding:20px; text-align:center; }
+        nav a { color:#fff; text-decoration:none; margin:0 15px; font-weight:bold; }
+        main { padding:40px; text-align:center; }
+        button { background:#0077ff; color:#fff; border:none; padding:15px 25px; font-size:16px; cursor:pointer; border-radius:5px; }
+        button:hover { background:#005fcc; }
+        footer { background:#1b1b1b; color:#fff; text-align:center; padding:20px; position:fixed; bottom:0; width:100%; }
+        input[type=email] { padding:10px; width:250px; border-radius:5px; border:1px solid #ccc; }
+    </style>
 </head>
+<body>
+    <header>
+        <h1>Orion Carbon</h1>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Welcome to Orion Carbon</h2>
+        <p>Blockchain-based carbon credit issuance and trading platform.</p>
+        <div id="subscribe">
+            <h3>Subscribe for updates</h3>
+            <form onsubmit="subscribe(event)">
+                <input type="email" id="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
+            <p id="msg" style="color:green;"></p>
+        </div>
+    </main>
+    <footer>
+        &copy; 2025 Orion Carbon. All rights reserved.
+    </footer>
 
-<body class="font-b text-gray-900 bg-gray-50">
-
-<!-- HEADER -->
-<header class="fixed top-0 w-full bg-white/98 backdrop-blur-xl shadow-2xl z-50">
-  <div class="max-w-7xl mx-auto px-6 py-5 flex justify-between items-center">
-    <a href="#" onclick="show('home')" class="flex items-center space-x-4">
-      <svg width="80" height="80" viewBox="0 0 100 100" class="logo"><circle cx="50" cy="50" r="46" fill="none" stroke="#15803d" stroke-width="7"/><circle cx="30" cy="30" r="10" fill="#f59e0b"/><circle cx="50" cy="35" r="13" fill="#f59e0b"/><circle cx="70" cy="30" r="9" fill="#f59e0b"/><text x="50" y="82" text-anchor="middle" font-size="17" font-weight="700" fill="#052e16">ORION</text></svg>
-      <div><h1 class="text-4xl font-d font-bold text-p">ORION CARBON</h1><p class="text-sm text-e -mt-1">Kathu • Northern Cape • South Africa</p></div>
-    </a>
-    <nav class="hidden lg:flex space-x-10 text-lg font-medium">
-      <a href="#" onclick="show('home')" class="hover:text-s">Home</a>
-      <a href="#" onclick="show('divisions')" class="hover:text-s">Divisions</a>
-      <a href="#" onclick="show('synergy')" class="hover:text-s">Synergy</a>
-      <a href="#" onclick="show('founder')" class="hover:text-s">Founder</a>
-      <a href="#" onclick="show('contact')" class="hover:text-s">Contact</a>
-    </nav>
-    <button onclick="connect()" class="bg-s text-p px-8 py-3 rounded-full font-bold hover:bg-amber-500 transition">Connect Wallet</button>
-  </div>
-</header>
-
-<script>
-function show(id){document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));document.getElementById(id).classList.add('active');window.scrollTo(0,0)}
-window.onload=()=>show('home');
-
-// REAL MetaMask + Polygon + Smart Contract Interaction
-let provider, signer, contract;
-const CONTRACT_ADDRESS = "0x8f8aF8b8C8D8e8F8a9B9c9D9e9F8a8B8c8D8e8F9"; // Real deployed contract
-const ABI = [{"inputs":[],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[{"internalType":"address","name":"to","type":"address"},{"internalType":"uint256","name":"amount","type":"uint256"}],"name":"mintForCredits","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"uint256","name":"amount","type":"uint256"}],"name":"burnForRetirement","outputs":[],"stateMutability":"nonpayable","type":"function"}];
-
-async function connect(){
-  if(!window.ethereum){alert("Install MetaMask");return}
-  provider = new ethers.providers.Web3Provider(window.ethereum);
-  await provider.send("eth_requestAccounts", []);
-  signer = provider.getSigner();
-  contract = new ethers.Contract(CONTRACT_ADDRESS, ABI, signer);
-  const addr = await signer.getAddress();
-  document.getElementById('wallet').innerText = `Connected: ${addr.slice(0,6)}...${addr.slice(-4)}`;
-  // Auto-switch to Polygon
-  try{await window.ethereum.request({method:'wallet_switchEthereumChain',params:[{chainId:'0x89'}]});}catch(e){await window.ethereum.request({method:'wallet_addEthereumChain',params:[{chainId:'0x89',chainName:'Polygon',rpcUrls:['https://polygon-rpc.com'],nativeCurrency:{name:'MATIC',symbol:'MATIC',decimals:18},blockExplorerUrls:['https://polygonscan.com']}]);}}
-}
-
-async function mintTokens(){
-  if(!contract){alert("Connect wallet first");return}
-  const tx = await contract.mintForCredits(await signer.getAddress(), ethers.utils.parseUnits("100",18));
-  await tx.wait();
-  alert("100 OCC tokens minted!");
-}
-AOS.init({once:true,duration:1100});
-</script>
-
-<!-- PAGE 1 HOME -->
-<section id="home" class="page active min-h-screen hero text-white flex items-center justify-center text-center pt-20">
-  <div class="max-w-6xl mx-auto px-6" data-aos="fade-up">
-    <h1 class="text-7xl md:text-9xl font-d font-bold mb-6">ORION CARBON</h1>
-    <p class="text-3xl md:text-5xl mb-8">Africa’s Only Full-Stack Carbon Ecosystem</p>
-    <p class="text-2xl mb-12">Verified Credits → Tokenization → Green Jobs<br>Founder: <strong class="text-s">Remigio Angelo Dingashe</strong></p>
-    <div class="space-x-8">
-      <button onclick="connect()" class="bg-s text-p px-14 py-7 rounded-full text-2xl font-bold hover:bg-amber-500 transition">Connect Wallet</button>
-      <button onclick="mintTokens()" class="bg-e text-white px-14 py-7 rounded-full text-2xl font-bold hover:bg-green-600 transition">Mint 100 OCC Tokens</button>
-      <p id="wallet" class="text-xl mt-6 text-green-200"></p>
-    </div>
-  </div>
-</section>
-
-<!-- PAGE 2 DIVISIONS -->
-<section id="divisions" class="page py-32 bg-white">
-  <div class="max-w-7xl mx-auto px-6">
-    <h2 class="text-6xl font-d text-center text-p mb-20" data-aos="fade-up">Three Integrated Divisions</h2>
-    <div class="space-y-20">
-      <div class="bg-gradient-to-br from-p to-e text-white p-12 rounded-3xl shadow-2xl" data-aos="fade-up">
-        <h3 class="text-5xl font-d mb-8">1. Carbon Credit Development</h3>
-        <p class="text-2xl font-bold mb-8">“We turn South African projects into verified carbon credits that meet national MRV standards.”</p>
-        <p class="text-xl">Revenue Year 1: ~R450k • 5 projects • 10–20% success fee</p>
-      </div>
-      <div class="bg-gradient-to-br from-e to-s text-white p-12 rounded-3xl shadow-2xl" data-aos="fade-up" data-aos-delay="200">
-        <h3 class="text-5xl font-d mb-8">2. Tokenization & Marketplace</h3>
-        <p class="text-2xl font-bold mb-8">“Verified credits become OCC tokens on Polygon – no double-counting, instant liquidity.”</p>
-        <p class="text-xl">Revenue Year 1: ~R100k • 10,000 credits • 0.5–1.5% trading fee</p>
-      </div>
-      <div class="bg-gradient-to-br from-s to-p text-white p-12 rounded-3xl shadow-2xl" data-aos="fade-up" data-aos-delay="400">
-        <h3 class="text-5xl font-d mb-8">3. Orion Academy</h3>
-        <p class="text-2xl font-bold mb-8">“Training unemployed Northern Cape youth as paid MRV professionals.”</p>
-        <p class="text-xl">Revenue Year 1: ~R100k • 100 learners • 100% funded by trading + grants</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- PAGE 3 SYNERGY -->
-<section id="synergy" class="page py-32 bg-gradient-to-b from-gray-50 to-e/10">
-  <div class="max-w-6xl mx-auto px-6 text-center">
-    <h2 class="text-6xl font-d text-p mb-16" data-aos="fade-up">Closed-Loop Synergy<br><span class="text-4xl text-s">No competitor on Earth has this</span></h2>
-    <div class="grid md:grid-cols-3 gap-12">
-      <div class="bg-white p-16 rounded-3xl shadow-2xl" data-aos="zoom-in"><p class="text-9xl font-bold text-s mb-6">1→2</p><p class="text-3xl">Credits → Tokens</p></div>
-      <div class="bg-white p-16 rounded-3xl shadow-2xl" data-aos="zoom-in" data-aos-delay="200"><p class="text-9xl font-bold text-s mb-6">2→3</p><p class="text-3xl">Revenue → Bursaries</p></div>
-      <div class="bg-white p-16 rounded-3xl shadow-2xl" data-aos="zoom-in" data-aos-delay="400"><p class="text-9xl font-bold text-s mb-6">3→1</p><p class="text-3xl">Grads → Workforce</p></div>
-    </div>
-  </div>
-</section>
-
-<!-- PAGE 4 FOUNDER -->
-<section id="founder" class="page py-32 bg-white">
-  <div class="max-w-5xl mx-auto px-6 text-center">
-    <h2 class="text-7xl font-d text-p mb-20" data-aos="fade-up">Founder & CEO</h2>
-    <div class="bg-gradient-to-br from-p to-e p-3 rounded-3xl inline-block shadow-2xl">
-      <div class="bg-white p-12 rounded-3xl">
-        <div class="w-96 h-96 bg-gray-200 border-4 border-dashed rounded-3xl mx-auto mb-10"></div>
-        <h3 class="text-6xl font-d text-p mb-6">Remigio Angelo Dingashe</h3>
-        <p class="text-3xl mb-8">Kathu • Northern Cape • South Africa</p>
-        <p class="text-2xl max-w-3xl mx-auto">Turning climate action into real jobs and real wealth for local communities.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- PAGE 5 CONTACT -->
-<section id="contact" class="page py-32 bg-p text-white">
-  <div class="max-w-4xl mx-auto px-6 text-center">
-    <h2 class="text-7xl font-d mb-12">Let’s Build Together</h2>
-    <p class="text-5xl mb-8">Remigio Angelo Dingashe</p>
-    <a href="mailto:dingashea@gmail.com" class="text-6xl text-s underline mb-12 block">dingashea@gmail.com</a>
-    <div class="space-x-10">
-      <button onclick="connect()" class="bg-s text-p px-16 py-8 rounded-full text-3xl font-bold">Connect Wallet</button>
-      <button onclick="mintTokens()" class="bg-e text-white px-16 py-8 rounded-full text-3xl font-bold">Mint Tokens</button>
-      <a href="https://wa.me/+27769440939" target="_blank" class="bg-e text-white px-16 py-8 rounded-full text-3xl font-bold">WhatsApp</a>
-    </div>
-  </div>
-</section>
-
-<footer class="bg-dark text-white py-12 text-center text-xl">
-  © 2025 Orion Carbon • Remigio Angelo Dingashe • Kathu, Northern Cape
-</footer>
-
+    <script>
+        function subscribe(e) {
+            e.preventDefault();
+            let email = document.getElementById('email').value;
+            document.getElementById('msg').innerText = `Thank you, ${email}, for subscribing!`;
+            document.getElementById('email').value = '';
+        }
+    </script>
 </body>
 </html>
