--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Orion Carbon - Home</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 <script src="https://cdn.jsdelivr.net/npm/ethers/dist/ethers.min.js"></script>
 </head>
 <body>
-<header>
+
+<!-- Header -->
+<header class="header">
   <div class="logo">Orion Carbon</div>
   <nav>
     <a href="index.html">Home</a>
@@ -19,33 +22,34 @@
   </nav>
 </header>
 
-<main>
-  <section class="hero">
-    <h1>Orion Carbon</h1>
-    <p>Blockchain-based carbon credit issuance and trading platform</p>
+<!-- Hero Section -->
+<section class="hero">
+  <h1>Leading Blockchain Carbon Credit Platform</h1>
+  <p>Transparent, efficient, and sustainable carbon credit issuance and trading.</p>
+  
+  <div class="hero-buttons">
     <button onclick="connectWallet()">Connect MetaMask</button>
-    <p id="wallet-status"></p>
-  </section>
-
-  <section class="subscribe">
-    <h2>Subscribe for Updates</h2>
-    <input type="email" id="email" placeholder="Enter your email">
     <button onclick="subscribe()">Subscribe</button>
-    <p id="msg"></p>
-  </section>
-</main>
+  </div>
 
-<footer>
-  &copy; 2025 Orion Carbon. All rights reserved.
+  <input type="email" id="email" placeholder="Enter your email" class="email-input">
+  <p id="wallet-status" class="status"></p>
+  <p id="msg" class="status"></p>
+</section>
+
+<!-- Footer -->
+<footer class="footer">
+  &copy; 2025 Orion Carbon. All Rights Reserved.
 </footer>
 
+<!-- Scripts -->
 <script>
 async function connectWallet() {
   if (window.ethereum) {
     try {
       const accounts = await ethereum.request({ method: 'eth_requestAccounts' });
       document.getElementById('wallet-status').innerText = "Connected: " + accounts[0];
-    } catch (err) {
+    } catch {
       document.getElementById('wallet-status').innerText = "Connection rejected.";
     }
   } else {
@@ -55,9 +59,12 @@ async function connectWallet() {
 
 function subscribe() {
   const email = document.getElementById('email').value;
-  document.getElementById('msg').innerText = `Thank you, ${email}, for subscribing!`;
-  document.getElementById('email').value = '';
+  if(email) {
+    document.getElementById('msg').innerText = `Thank you, ${email}, for subscribing!`;
+    document.getElementById('email').value = '';
+  }
 }
 </script>
+
 </body>
 </html>
