Revise About page content and layout
Updated the About page to enhance content and structure.

--- a/about.html
+++ b/about.html
@@ -4,10 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Orion Carbon - About</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+
+<!-- Header -->
+<header class="header">
   <div class="logo">Orion Carbon</div>
   <nav>
     <a href="index.html">Home</a>
@@ -18,39 +21,56 @@
   </nav>
 </header>
 
-<main>
-  <section class="about-hero">
-    <h1>About Orion Carbon</h1>
-    <p>We are a black female-owned sole proprietorship focused on blockchain-based carbon credit issuance and trading.</p>
-  </section>
+<!-- About Hero Section -->
+<section class="hero about-hero">
+  <h1>About Orion Carbon</h1>
+  <p>Orion Carbon is a black female-owned sole proprietorship focused on blockchain-based carbon credit issuance and trading. We deliver transparency, efficiency, and measurable impact for large-scale carbon markets.</p>
+</section>
 
-  <section class="bmc">
-    <h2>Business Model Canvas Overview</h2>
-    <div class="canvas">
-      <h3>1. Key Partners</h3>
-      <p>Large pollution emitters (e.g., Sasol), environmental NGOs, blockchain developers</p>
-      <h3>2. Key Activities</h3>
-      <p>Issuing carbon credits, trading platform management, blockchain integration</p>
-      <h3>3. Key Resources</h3>
-      <p>Blockchain infrastructure, regulatory licenses, skilled personnel</p>
-      <h3>4. Value Propositions</h3>
-      <p>Transparent carbon credit tracking, efficient trading, sustainable impact</p>
-      <h3>5. Customer Relationships</h3>
-      <p>Dedicated account management, platform support, education on carbon credits</p>
-      <h3>6. Channels</h3>
-      <p>Website, blockchain platform, email communication, workshops</p>
-      <h3>7. Customer Segments</h3>
-      <p>Large industrial emitters, investors in carbon markets, government entities</p>
-      <h3>8. Cost Structure</h3>
-      <p>Platform development, blockchain fees, staff salaries, marketing</p>
-      <h3>9. Revenue Streams</h3>
-      <p>Trading fees, subscription fees, consulting services</p>
-    </div>
-  </section>
-</main>
+<!-- Business Model Canvas Section -->
+<section class="bmc">
+  <div class="card">
+    <h3>Key Partners</h3>
+    <p>Large industrial emitters (Sasol), environmental NGOs, blockchain developers</p>
+  </div>
+  <div class="card">
+    <h3>Key Activities</h3>
+    <p>Issuing carbon credits, managing trading platform, integrating blockchain</p>
+  </div>
+  <div class="card">
+    <h3>Key Resources</h3>
+    <p>Blockchain infrastructure, regulatory licenses, skilled personnel</p>
+  </div>
+  <div class="card">
+    <h3>Value Propositions</h3>
+    <p>Transparent carbon credit tracking, efficient trading, sustainable impact</p>
+  </div>
+  <div class="card">
+    <h3>Customer Relationships</h3>
+    <p>Dedicated account management, platform support, education on carbon credits</p>
+  </div>
+  <div class="card">
+    <h3>Channels</h3>
+    <p>Website, blockchain platform, email communication, workshops</p>
+  </div>
+  <div class="card">
+    <h3>Customer Segments</h3>
+    <p>Large industrial emitters, investors in carbon markets, government entities</p>
+  </div>
+  <div class="card">
+    <h3>Cost Structure</h3>
+    <p>Platform development, blockchain fees, staff salaries, marketing</p>
+  </div>
+  <div class="card">
+    <h3>Revenue Streams</h3>
+    <p>Trading fees, subscription fees, consulting services</p>
+  </div>
+</section>
 
-<footer>
-  &copy; 2025 Orion Carbon. All rights reserved.
+<!-- Footer -->
+<footer class="footer">
+  &copy; 2025 Orion Carbon. All Rights Reserved.
 </footer>
+
 </body>
 </html>
